--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,6 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "quotes": ["error", "double"],
-    "indent": ["error", 2]
+    "quotes": ["error", "double"]
   }
 }
