--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rd -r public\\scripts 2>null & tsc",
     "build:dev": "rd -r public\\scripts 2>null & tsc -p tsconfig-dev.json",
     "start": "http-server -p 3000",
+    "start:cli": "node public/scripts",
     "lint": "eslint src --ext .js --ext .ts",
     "lint-fix": "eslint src --ext .js --ext .ts --fix"
   },
@@ -27,5 +28,6 @@
     "eslint": "^8.31.0",
     "http-server": "^14.1.1",
     "typescript": "^4.9.4"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
